@@ -3,8 +3,8 @@ package com.litesoftwares.coingecko.examples;
 import com.litesoftwares.coingecko.CoinGeckoApiClient;
 import com.litesoftwares.coingecko.constant.Currency;
 import com.litesoftwares.coingecko.impl.CoinGeckoApiClientImpl;
-import com.sun.tools.javac.util.List;
 
+import java.util.Arrays;
 import java.util.Map;
 
 public class SimpleExample {
@@ -12,7 +12,7 @@ public class SimpleExample {
 
         CoinGeckoApiClient client = new CoinGeckoApiClientImpl();
 
-        Map<String, Map<String, Double>> bitcoin = client.getPrice(List.of("bitcoin"),Currency.USD);
+        Map<String, Map<String, Double>> bitcoin = client.getPrice(Arrays.asList("bitcoin"), Currency.USD);
 
         System.out.println(bitcoin);
 
